Revision history for Catmandu-OAI

{{$NEXT}}

0.16  2017-04-06 10:36:52 CEST
  - Adding support for Identify
  - Fixing POD errors

0.15  2017-04-05 15:50:08 CEST
  - Adding support for GetRecord and ListMetadataFormats
  - Updated POD

0.14  2017-03-27 10:28:10 CEST
  - Fixing memory leak issues

0.13  2017-03-21 13:32:20 CET
  - Making retries using exponential cutoff algorithm
  - Adding realm, username and password options

0.12  2016-12-15 15:19:57 CET
  - Adding max-retries feature to reconnect to a database when the network fails
  - More pod

0.11  2015-10-15 11:59:19 CEST
  - Adding support for proxys

0.10  2015-09-23 10:28:29 CEST
  - Adding support for MODS
  - Adding support for MARC collections

0.09  2015-08-17 14:50:39 CEST
  - Fixing repeated last page bug #10

0.08  2015-07-03 11:31:26 CEST
  - Don't bundle the dist.ini in distribution
  - Adding resumpionToken option

0.07  2015-05-20 16:15:02 CEST
  - Adding XSLT preprocessing

0.06  2014-06-22 11:10:24 CEST
  - Refactoring the handler code into Parsers, more in line with Catmandu::SRU
  - Adding marcxml parser

0.05  2014-06-22 09:34:00 CEST
  - Adding support for default XML::Struct parsing
  - Adding support for passing handlers by name and by invocation
  - Refactoring the RAW XML response into the Catmandu::Importer::OAI::RAW parser

0.04  2014-06-15 20:30:07 CEST
  - switched to the new HTTP::OAI with callbacks
  - adding a network test

0.03  2014-06-15 10:22:55 CEST
  - new option: dry (as supported my Catmandu::Importer::getJSON)
  - new option: listIdentifiers
  - changed packaging to Dist::Milla
  - adding more pod

0.02    2013-03-11
  - pluggable record handlers
  - support set, metadataPrefix, from, until
  - more tolerant of bad xml

0.01    2012-05-04
  - initial release